# translation_demo

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  main.py  requirements.txt  translate_demo.py
frontend/: .sesskey  Dockerfile  main.py  requirements.txt
