[tool.poetry]
name = "translate-demo"
version = "0.1.0"
description = "A simple demonstration of a translation app."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
